<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorBackGround"
              android:gravity="center"
              android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="22dp"
        android:text="@string/question_text"
        android:textColor="@color/colorLightText"
        android:textSize="22dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_A"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:background="@color/colorBackGroundButton"
            android:text="@string/button_A"
            />

        <Button
            android:id="@+id/button_B"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:background="@color/colorBackGroundButton"
            android:text="@string/button_B"
            android:gravity="center" />
        <Button
            android:id="@+id/button_C"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:background="@color/colorBackGroundButton"
            android:text="@string/button_C" />

        <Button
            android:id="@+id/button_D"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:background="@color/colorBackGroundButton"
            android:text="@string/button_D" />


    </LinearLayout>

</LinearLayout>
